--- a/Client/src/components/card/card.module.css
+++ b/Client/src/components/card/card.module.css
@@ -48,7 +48,7 @@
     cursor: pointer;
     position: absolute;
     top: 36%;
-    left: 31%;
+    left: 10%;
     width: 100px;
     height:35px;
     margin: 20px;
@@ -64,5 +64,19 @@
     border: 4px solid #ff0000;
     color: #ff0000;
     border-radius: 20px;
+    font-size: 18px;
+}
+
+.container .fav{
+    cursor: pointer;
+    position: absolute;
+    top: 30.5%;
+    left: 51%;
+    width: 100px;
+    height:35px;
+    margin: 20px;
+    border-radius: 20px;
+    background: none;
+    transition: all .5s;
     font-size: 18px;
 }
